# OpticalFlowTracking

./: .gitignore  CMakeLists.txt  MyTracker.cpp  MyTracker.h  OpticalFlowTracker.cpp  OpticalFlowTracker.h  Tracker.cpp  Tracker.h  main.cpp  tracker.cpp
trackers/: CSRTTracker.cpp  CSRTTracker.h  KCFTracker.cpp  KCFTracker.h  OpticalFlowTracker.cpp  OpticalFlowTracker.h  Tracker.cpp  Tracker.h
